--- a/AndorsTrail/AndroidManifest.xml
+++ b/AndorsTrail/AndroidManifest.xml
@@ -20,9 +20,10 @@
 		android:anyDensity="true"
 		/>
 	
-	<uses-permission 
-	    android:name="android.permission.WRITE_EXTERNAL_STORAGE" 
-	    />
+	<uses-permission android:name = "android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name = "android.permission.INTERNET"/>
+    <uses-permission android:name = "android.permission.ACCESS_NETWORK_STATE" />    
+    <uses-permission android:name = "android.permission.WRITE_EXTERNAL_STORAGE" />
 		
 	<application 
 		android:name=".AndorsTrailApplication" 
@@ -56,6 +57,7 @@
 		<activity android:name=".activity.LoadingActivity" />
 		<activity android:name=".activity.Preferences" />
 		<activity android:name=".activity.LoadSaveActivity" android:theme="@android:style/Theme.Dialog" />
+		<activity android:name=".activity.TwinspriteActivity" android:theme="@android:style/Theme.Dialog" />
 		<activity android:name=".activity.ActorConditionInfoActivity" android:theme="@android:style/Theme.Dialog" />
 		<activity android:name=".activity.BulkSelectionInterface" android:theme="@android:style/Theme.Dialog" />
 		<activity android:name=".activity.SkillInfoActivity" android:theme="@android:style/Theme.Dialog" />
