--- a/AndorsTrail/AndroidManifest.xml
+++ b/AndorsTrail/AndroidManifest.xml
@@ -8,7 +8,7 @@
 	android:installLocation="auto"
 	>
 	<uses-sdk 
-		android:minSdkVersion="8" 
+		android:minSdkVersion="10" 
 		android:targetSdkVersion="19"
 		/>
 	
@@ -24,6 +24,7 @@
     <uses-permission android:name = "android.permission.INTERNET"/>
     <uses-permission android:name = "android.permission.ACCESS_NETWORK_STATE" />    
     <uses-permission android:name = "android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name = "android.permission.NFC" />
 		
 	<application 
 		android:name=".AndorsTrailApplication" 
